tests/code/pages/errors/arg-error-too-many.tht

foo('1', 2, 3)

fun foo($a:s) {
    >> $a
}


